[package]
name = "safe"
version = "0.1.0"
authors = ["notonetotalk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.1.4"
rand = "0.8.3"
rpassword = "5.0.1"
secstr = "0.4.0"
tar = "0.4.33"
brotli2 = "0.3.2"
rust-crypto = "0.2.36"
aes-stream = "0.2.1"
anyhow = "1.0.38"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
